--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,87 @@
   box-sizing: border-box;
 }
 
+h1 {
+  text-align: center;
+  margin: 30px 0;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  background: linear-gradient(to right, yellow, red, blue);
+  background-clip: text;
+  color: transparent;
+  -webkit-background-clip: text;
+}
+
+.dgrid {
+  display: grid;
+  grid-template-columns: 500px 500px;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
 .form-group {
   display: grid;
-  grid-template-columns: 150px 200px;
+  grid-template-columns: 150px 200px 100px;
   align-items: center;
 }
 
 .form-group button {
   margin-right: 20px;
+}
+
+.content,
+.group {
+  background: rgba(0, 197, 247, 0.2);
+  border: 1px solid red;
+  padding: 10px;
+}
+
+p#exe3-ket-qua1,
+p#exe3-ket-qua2,
+p#exe3-ket-qua3 {
+  margin-bottom: 0;
+  height: 100%;
+  margin-left: 5px;
+  line-height: 24px;
+}
+
+p#exe4-ket-qua {
+  height: 100%;
+  margin-bottom: 0;
+}
+
+.description {
+  font-size: 1.2rem;
+  margin-bottom: 0;
+}
+
+.text-trong {
+  display: inline-block;
+  font-weight: bold;
+  width: 80px;
+}
+
+#text-modal-body {
+  font-size: 2rem;
+  font-weight: 600;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background: linear-gradient(
+    90deg,
+    rgba(203, 183, 41, 1) 0%,
+    rgba(147, 223, 223, 1) 50%,
+    rgba(223, 151, 200, 1) 100%
+  );
+  color: white;
+}
+
+.modal-title {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 0, 0, 1) 0%,
+    rgba(54, 255, 254, 1) 50%,
+    rgba(240, 252, 97, 1) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
