--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@ h1 {
   -webkit-background-clip: text;
 }
 
+.level-exe {
+  color: rgba(255, 0, 0, 1);
+  font-size: 2rem;
+  font-weight: 600;
+  margin-left: 3.5rem;
+}
+
 .dgrid {
   display: grid;
   grid-template-columns: 500px 500px;
@@ -28,6 +35,15 @@ h1 {
   align-items: center;
 }
 
+input {
+  text-align: center;
+}
+
+label {
+  font-weight: 600;
+  margin-bottom: 0 !important;
+}
+
 .form-group button {
   margin-right: 20px;
 }
@@ -37,20 +53,6 @@ h1 {
   background: rgba(0, 197, 247, 0.2);
   border: 1px solid red;
   padding: 10px;
-}
-
-p#exe3-ket-qua1,
-p#exe3-ket-qua2,
-p#exe3-ket-qua3 {
-  margin-bottom: 0;
-  height: 100%;
-  margin-left: 5px;
-  line-height: 24px;
-}
-
-p#exe4-ket-qua {
-  height: 100%;
-  margin-bottom: 0;
 }
 
 .description {
@@ -87,4 +89,15 @@ p#exe4-ket-qua {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+}
+
+.paragraph {
+  width: 100%;
+  line-height: 38px;
+  background: #28a745;
+  margin-bottom: 0;
+  border-radius: 5px;
+  padding: 0 5px;
+  color: #fff;
+  text-align: center;
 }
